# direnv-nix-allow

./: .gitignore  LICENSE  README.md  direnv-nix-allow.cabal  flake.nix  hie.yaml
.github/workflows/: test.yml
docs/: wip.md
nix/: formatter.nix  outputs.nix  pkgs.nix  project.nix  shell.nix
src/: DirenvNixAllow.hs  Main.hs
tests/: Spec.hs
